[landing] Fix landing background
Summary:
I broke the landing page's background in D6003 by adding a CSS selector that applied globally to `html` and `body`.

Turns out doing it right is a bit harder. In order to avoid needing dynamic imports, I needed to stop relying on `html` and `body` for styling, as they appear above `#react-root`. To make that happen, I had to move the background styling to inner divs, which required moving some CSS attributes around to get everything to look right.

This solves https://linear.app/comm/issue/ENG-2535/landing-page-background-is-messed-up

Test Plan: Make sure http://localhost:3000/commlanding/ has the proper background (both layers of CSS `background`, plus the stars, and with scrolling looking right) and that http://localhost:3000/commlanding/siwe just has a gray background

Reviewers: atul, ginsu, tomek, jon

Reviewed By: atul, ginsu

Differential Revision: https://phab.comm.dev/D6015

--- a/landing/global.css
+++ b/landing/global.css
@@ -12,25 +12,6 @@
 }
 
 /* ===== GENERAL PAGE STYLES ===== */
-html {
-  background: radial-gradient(ellipse at bottom, #1f252e, #111827) fixed;
-  font-family: var(--sans-serif);
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-  color: white;
-  word-break: break-word;
-}
-
-/* Override browser default to achieve edge-to-edge footer translucency effect */
-body {
-  background-image: radial-gradient(
-    circle at top left,
-    #2d008888 0%,
-    #ffffff00 50%
-  );
-  margin: 0;
-  padding: 0;
-}
 
 html,
 body,
