--- a/landing/landing.css
+++ b/landing/landing.css
@@ -1,3 +1,27 @@
+.container {
+  background: radial-gradient(ellipse at bottom, #1f252e, #111827) fixed;
+  font-family: var(--sans-serif);
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  color: white;
+  word-break: break-word;
+  height: 100%;
+  position: relative;
+  z-index: 0;
+}
+
+.innerContainer {
+  background-image: radial-gradient(
+    circle at top left,
+    #2d008888 0%,
+    #ffffff00 50%
+  );
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: auto;
+}
+
 .wrapper {
   transition-property: max-width;
   transition: 300ms;
